[gd_scene load_steps=3 format=3 uid="uid://c3p1tv310ixer"]

[ext_resource type="Script" path="res://src/main/chat.gd" id="1_7y34p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7bn1"]

[node name="ChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7y34p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 200

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n7bn1")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatLog" type="RichTextLabel" parent="MarginContainer/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ChatLine" type="LineEdit" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Write message and press Enter"

[node name="SendButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[connection signal="text_submitted" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/ChatLine" to="." method="_on_chat_line_text_submitted"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
